Details card done

--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -5,7 +5,7 @@
 
 	border: solid 1px #bacdd8;
 
-	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	/* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
 
 .card__details {
