--- a/src/components/Heart/style.css
+++ b/src/components/Heart/style.css
@@ -4,7 +4,9 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-right: 2rem;
+	margin-right: 40px;
+	cursor: pointer;
+	/* background-color: white; */
 }
 
 .red {
@@ -18,7 +20,6 @@
 	background-position: left;
 	height: 50px;
 	width: 50px;
-	cursor: pointer;
 }
 
 .animate {
