--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,34 @@ button:hover {
 		max-width: 1156px;
 	}
 }
+
+/* Loader */
+
+.lds-dual-ring {
+	display: inline-block;
+	width: 80px;
+	height: 80px;
+}
+.lds-dual-ring:after {
+	content: " ";
+	display: block;
+	width: 64px;
+	height: 64px;
+	margin: 8px;
+	border-radius: 50%;
+	border: 6px solid #18c6ac;
+	border-color: #18c6ac transparent #18c6ac transparent;
+	animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+.loading {
+	text-align: center;
+}
